# aimo-node

./: CLAUDE.md  Cargo.toml  PRD.md  PROXY.md  README.md
src/: cli.rs  main.rs  node.rs  serve.rs
src/config/: api.rs  mod.rs  server.rs
src/core/: keys.rs  keys_test.rs  mod.rs  router.rs  transport.rs
src/core/state/: events.rs  mod.rs  revocation.rs
src/db/: keys.rs  mod.rs  state.rs
src/helpers/: keygen.rs  mod.rs
src/helpers/proxy/: mod.rs  serve.rs
src/router/: interface.rs  local.rs  message.rs  mod.rs
src/router/tests/: local.rs
src/server/: context.rs  mod.rs  serve.rs
src/server/api/: chat.rs  keys.rs  mod.rs  routes.rs  state.rs  subscribe.rs
src/server/grpc/: mod.rs  routes.rs  state.rs
src/server/middleware/: auth.rs  cors.rs  mod.rs  timeout.rs
src/server/types/: keys.rs
src/transport/: mod.rs
src/types/: keys.rs  keys_test.rs  mod.rs
src/utils/: id.rs
