[package]
name = "aimo-node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
axum = { version = "0.8.4", features = ["ws"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures-core = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
libp2p = { version = "0.56.0", features = [
    "gossipsub",
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "tokio",
    "macros",
    "quic",
] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace", "timeout"] }
tower_governor = "0.7.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
