[package]
name = "aimo-node"
version = "0.0.1"
edition = "2024"
description = "AiMo Network router node Rust implementation"
license-file = "LICENSE"
homepage = "https://aimo.network"
repository = "https://github.com/AIMOverse/aimo-node"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bs58 = { version = "0.5.1", features = ["check"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.42", features = ["derive"] }
futures-core = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
libp2p = { version = "0.56.0", features = [
    "gossipsub",
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "tokio",
    "macros",
    "quic",
] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
solana-sdk = "2.3.1"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
