[package]
name = "aimo-cli"
version = "0.1.0"
edition = "2024"
description = "AiMo Network router node Rust implementation"
license-file = "LICENSE"
homepage = "https://aimo.network"
repository = "https://github.com/AIMOverse/aimo-node"

[[bin]]
name = "aimo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bs58 = { version = "0.5.1", features = ["check"] }
canonical_json = "0.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.42", features = ["derive"] }
dirs = "6.0.0"
futures-core = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
libp2p = { version = "0.56.0", features = [
    "gossipsub",
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "tokio",
    "macros",
    "quic",
] }
reqwest = { version = "0.12.22", features = ["stream"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
sled = "0.34.7"
solana-sdk = "2.3.1"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
axum = { version = "0.8.4", features = ["ws", "macros"] }
